--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,17 +7,17 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Experience
+    url: '#experience'
+    weight: 20
   - name: Projects
     url: '#projects'
-    weight: 20
-  - name: Courses
-    url: '#courses'
     weight: 30
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 40
-  - name: Talks
-    url: '#talks'
+  - name: Teaching
+    url: '#teaching'
     weight: 50
   - name: Contact
     url: '#contact'
