--- a/.github/workflows/import-publications.yml
+++ b/.github/workflows/import-publications.yml
@@ -9,7 +9,7 @@ permissions:
 # Run workflow when a `.bib` file is added or updated in the `data/` folder
 on:
   push:
-    branches: ['main']
+    branches: ['master']
     paths: ['publications.bib']
 
   # Allows you to run this workflow manually from the Actions tab
@@ -44,7 +44,7 @@ jobs:
           title: Hugo Blox Builder - Import latest publications
           body: |
             Import the latest publications from `publications.bib` to `content/publication/`.
-          base: main
+          base: master
           labels: automated-pr, content
           branch: hugoblox-import-publications
           delete-branch: true
