--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,11 +13,11 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
+  - name: Research Methods
+    url: '#research'
+    weight: 40
   - name: Publications
     url: '#publications'
-    weight: 40
-  - name: Research
-    url: '#research'
     weight: 50
   - name: Teaching
     url: '#teaching'
