--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -52,9 +52,9 @@ footer:
 # Localization
 
 locale:
-  date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
-  address_format: en-us
+  date_format: ' '
+  time_format: ' '
+  address_format: de
 
 # Site features
 
