--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,15 +16,18 @@ main:
   - name: Research Methods
     url: '#research'
     weight: 40
+  - name: Talks/Events
+    url: '#events'
+    weight: 50
   - name: Publications
     url: '#publications'
-    weight: 50
+    weight: 60
   - name: Teaching
     url: '#teaching'
-    weight: 60
+    weight: 70
   - name: Contact
     url: '#contact'
-    weight: 70
+    weight: 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
