--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -56,6 +56,7 @@ taxonomies:
   category: categories
   publication_type: publication_types
   author: authors
+  event: events  # Add "event" as a valid taxonomy
 markup:
   _merge: deep
 related:
